--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,7 @@ dependencies {
 	
 	testCompile "org.codehaus.groovy:groovy:2.4.3"
 	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+	testCompile "xmlunit:xmlunit:1.6"
 }
 
 jar {
