--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ jdk:
 before_install:
   - chmod +x gradlew
 
-env: GRADLE_OPTS="-Dorg.gradle.daemon=true"
-env: CI_OPTS="--stacktrace --debug"
+env: GRADLE_OPTS=-Dorg.gradle.daemon=true
