--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,15 @@ apply plugin: "signing"
 
 defaultTasks "build"
 
-version = "1.1.1-SNAPSHOT"
+version = "1.1.1"
 group = "org.mitre"
 archivesBaseName = "stix"
 
-project.ext.set("isReleaseVersion", !version.endsWith("SNAPSHOT"))
-project.ext.set("schemaVersion", "1.1.1")
+project.ext.set("schemaVersion", version)
+
+if (project.hasProperty("snapshot")) {
+	version = "${version}-SNAPSHOT"
+}
 
 task retrieveSchemas(type: RetrieveSchemasTask, dependsOn: clean) {
 	schemaVersion = project.schemaVersion
