--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_install:
 
 env: GRADLE_OPTS=-Dorg.gradle.daemon=true
 env: CI_OPTS=--stacktrace
+
+install: /bin/true
+script: "./gradlew build -x signArchives"
