--- a/build.gradle
+++ b/build.gradle
@@ -65,10 +65,6 @@ apply plugin: "signing"
 
 defaultTasks "build"
 
-version = "1.1.1"
-group = "org.mitre"
-archivesBaseName = "stix"
-
 project.ext.set("schemaVersion", version)
 
 if (!has("release")) {
@@ -158,7 +154,7 @@ uploadArchives{
 				packaging 'jar'
 				version "${project.version}"
 				// optionally artifactId can be defined here 
-				description "The JAXB Bindings for STIX v." + version
+				description "The Java bindings for STIX v." + version
 				url "https://github.com/STIXProject/java-stix"
 				
 				scm {
