--- a/build.gradle
+++ b/build.gradle
@@ -94,9 +94,12 @@ task cleanSchema(type: CleanSchemaTask) {
 }
 
 task calcChecksum(type: CalcChecksumTask) {
+	schemaVersion = project.schemaVersion
 }
 
-compileJava.dependsOn createPackageInfo
+if (!has("skipPackageInfo")) {
+	compileJava.dependsOn createPackageInfo
+}
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.4'
@@ -125,6 +128,11 @@ task checkProperties() {
 	}
 }
 
+task execute(type:JavaExec) {
+	main = project.mainClass
+	classpath = sourceSets.main.runtimeClasspath
+}
+
 uploadArchives{
 	configuration = configurations.archives
 	repositories {
@@ -150,7 +158,7 @@ uploadArchives{
 			}
 			
 			pom.project {
-				name "${archivesBaseName}"
+				name "${project.name}"
 				packaging 'jar'
 				version "${project.version}"
 				// optionally artifactId can be defined here 
@@ -223,7 +231,8 @@ sourceSets {
 		java { srcDirs("src/main/java", "src/generated/java") }
 		resources {
 			srcDir("src/main/resources")
-			exclude "*.xjb" // not needed in the jar
+			exclude "*.xjb"
+			exclude "**/v1.2-rc1"
 		}
 	}
 }
