--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,6 @@ if (!has("release")) {
 	version = "${version}-SNAPSHOT"
 }
 
-
 task retrieveSchemas(type: RetrieveSchemasTask, dependsOn: clean) {
 	schemaVersion = project.schemaVersion
 }
@@ -129,9 +128,7 @@ task checkProperties() {
 	}
 }
 
-//task execute(dependsOn: compileJava) {
 task execute(type:JavaExec) {
-	//ant.java(classname: project.hasProperty("mainClass") ? project.get("mainClass") : "org.mitre.stix.STIXSchema", fork: true, classpath: "${sourceSets.main.runtimeClasspath.asPath}")
 	main = project.mainClass
 	classpath = sourceSets.main.runtimeClasspath
 }
@@ -161,7 +158,7 @@ uploadArchives{
 			}
 			
 			pom.project {
-				name "${archivesBaseName}"
+				name "${project.name}"
 				packaging 'jar'
 				version "${project.version}"
 				// optionally artifactId can be defined here 
@@ -234,7 +231,8 @@ sourceSets {
 		java { srcDirs("src/main/java", "src/generated/java") }
 		resources {
 			srcDir("src/main/resources")
-			exclude "*.xjb" // not needed in the jar
+			exclude "*.xjb"
+			exclude "**/v1.1.1"
 		}
 	}
 }
