--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/main/resources/schemas/v1.1.1"]
 	path = src/main/resources/schemas/v1.1.1
 	url = https://github.com/STIXProject/schemas.git
+[submodule "src/main/resources/schemas/v1.2-rc1"]
+	path = src/main/resources/schemas/v1.2-rc1
+        url = https://github.com/STIXProject/schemas.git
