modified gradle to target Java v1.7

--- a/build.gradle
+++ b/build.gradle
@@ -316,6 +316,11 @@ artifacts {
 	archives javadocJar
 }
 
+tasks.withType(JavaCompile) {
+	sourceCompatibility = "1.7"
+	targetCompatibility = "1.7"
+}
+
 buildscript {
 	repositories {
 		jcenter()
