--- a/build.gradle
+++ b/build.gradle
@@ -235,7 +235,7 @@ sourceSets {
 		resources {
 			srcDir("src/main/resources")
 			exclude "*.xjb"
-			exclude "**/v1.1.1"
+			exclude "**/v1.2-rc1"
 		}
 	}
 }
@@ -314,6 +314,11 @@ artifacts {
 	archives jar
 	archives sourcesJar
 	archives javadocJar
+}
+
+tasks.withType(JavaCompile) {
+	sourceCompatibility = "1.7"
+	targetCompatibility = "1.7"
 }
 
 buildscript {
