--- a/build.gradle
+++ b/build.gradle
@@ -264,6 +264,7 @@ dependencies {
 	testCompile "org.codehaus.groovy:groovy:2.4.3"
 	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
 	testCompile "xmlunit:xmlunit:1.6"
+	testCompile "com.github.zafarkhaja:java-semver:0.9.0"
 }
 
 jar {
