fixing ci pipeline

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,13 @@ if (!has("skipPackageInfo")) {
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.4'
+	def jvmOpts='-Xmx1024m -Xms256m'
+	inputs.property("jvmOpts", jvmOpts)
+	doLast {
+		def optsEnvVar = "DEFAULT_JVM_OPTS"
+		scriptFile.write scriptFile.text.replace("$optsEnvVar=\"\"", "$optsEnvVar=\"$jvmOpts\"")
+		batchScript.write batchScript.text.replace("set $optsEnvVar=", "set $optsEnvVar=$jvmOpts")
+	}
 }
 
 task javadocJar(type: Jar) {
