changes for pom

--- a/build.gradle
+++ b/build.gradle
@@ -190,9 +190,9 @@ uploadArchives{
 
 				developers {
 					developer {
-						id 'nemonik'
-						name 'Michael Joseph Walsh'
-						email 'java-stix-pom[ASCII character number 64]nemonik.com'
+						id 'stix'
+						name 'STIX Project, The MITRE Corporation'
+						email 'stix[ASCII character number 64]mitre.org'
 					}
 				}
 			}
