--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ src/generated
 .gradle/2.1/taskArtifacts
 src/main/resources/namespace-prefix.xjb
 src/main/resource/schemas
+.gradle
+buildSrc/.gradle
